{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 15,
  "lineage": "bf3ba73f-940a-3da1-9f42-3d7422b93813",
  "resources": [
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:066506852513:security-group/sg-054d0c206ea4d4533",
            "description": "Security Group for Photoshare RDS",
            "egress": [],
            "id": "sg-054d0c206ea4d4533",
            "ingress": [],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "066506852513",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg"
            },
            "tags_all": {
              "Name": "db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a040b64002280c0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "066506852513",
            "id": "sg-054d0c206ea4d4533",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.photoshare_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:066506852513:security-group-rule/sgr-01505e3e51f30461e",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-01505e3e51f30461e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-054d0c206ea4d4533",
            "security_group_rule_id": "sgr-01505e3e51f30461e",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "066506852513",
            "id": "sgr-01505e3e51f30461e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.rds.aws_security_group.db_sg",
            "module.vpc.aws_vpc.photoshare_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:066506852513:internet-gateway/igw-0fad565039d08dfa3",
            "id": "igw-0fad565039d08dfa3",
            "owner_id": "066506852513",
            "region": "us-east-1",
            "tags": {
              "Name": "photoshare-igw"
            },
            "tags_all": {
              "Name": "photoshare-igw"
            },
            "vpc_id": "vpc-06a040b64002280c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.photoshare_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:066506852513:route-table/rtb-037e7225b6b15e58d",
            "id": "rtb-037e7225b6b15e58d",
            "owner_id": "066506852513",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fad565039d08dfa3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a040b64002280c0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "066506852513",
            "id": "rtb-037e7225b6b15e58d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.photoshare_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Public Subnet 1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010234809c9c84f8a",
            "region": "us-east-1",
            "route_table_id": "rtb-037e7225b6b15e58d",
            "subnet_id": "subnet-0262b5a9e62e2200c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.photoshare_vpc"
          ]
        },
        {
          "index_key": "Public Subnet 2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc53e4bef859f8ae",
            "region": "us-east-1",
            "route_table_id": "rtb-037e7225b6b15e58d",
            "subnet_id": "subnet-059d1a22586581553"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.photoshare_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Private Subnet 1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:066506852513:subnet/subnet-07bef48282dacd8b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07bef48282dacd8b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "066506852513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-06a040b64002280c0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "066506852513",
            "id": "subnet-07bef48282dacd8b9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.photoshare_vpc"
          ]
        },
        {
          "index_key": "Private Subnet 2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:066506852513:subnet/subnet-0fa671760c8ef2607",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa671760c8ef2607",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "066506852513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-06a040b64002280c0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "066506852513",
            "id": "subnet-0fa671760c8ef2607",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.photoshare_vpc"
          ]
        },
        {
          "index_key": "Public Subnet 1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:066506852513:subnet/subnet-0262b5a9e62e2200c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0262b5a9e62e2200c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "066506852513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-06a040b64002280c0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "066506852513",
            "id": "subnet-0262b5a9e62e2200c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.photoshare_vpc"
          ]
        },
        {
          "index_key": "Public Subnet 2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:066506852513:subnet/subnet-059d1a22586581553",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059d1a22586581553",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "066506852513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-06a040b64002280c0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "066506852513",
            "id": "subnet-059d1a22586581553",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.photoshare_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "photoshare_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:066506852513:vpc/vpc-06a040b64002280c0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f47a691d8ab4e529",
            "default_route_table_id": "rtb-0d7df2bdc8b150b95",
            "default_security_group_id": "sg-0e0d6e7269aa3cb62",
            "dhcp_options_id": "dopt-0856bbb30bb12997d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06a040b64002280c0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d7df2bdc8b150b95",
            "owner_id": "066506852513",
            "region": "us-east-1",
            "tags": {
              "Name": "photoshare-vpc"
            },
            "tags_all": {
              "Name": "photoshare-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "066506852513",
            "id": "vpc-06a040b64002280c0",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}